--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <option value="dev">Développeurs</option>
                 <option value="blondes">Blondes</option>
                 <option value="limit">-18</option>
-                <option value="dark">Catégorie interdite</option>
+                <option value="dark">Thibaut Mourat</option>
         </div>
     </div>
 
